--- a/app/views/preauthorization_mailer/send_preauthorization_email.html.erb
+++ b/app/views/preauthorization_mailer/send_preauthorization_email.html.erb
@@ -19,7 +19,7 @@
         a committee member
       <% end %>
       at TOCA Cares.
-      Please <%= link_to "create an account", new_user_registration_url, style: "color: #EB0029; font-weight: 700; text-decoration: none" do %>create an account<% end %> using this email address to finish setting up your account.
+      Please <%= link_to "create an account", new_user_registration_url, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> using this email address to finish setting up your account.
     </p>
     <p>
       If you have any issues, feel free to email us at <a href="mailto:admin@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">admin@tocacares.com</a>.
