--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,8 +33,8 @@
     <% if @user.committee %>
       <h2 class="text-center toca-uppercase color-toca-red mt-5">Committee Member Actions</h2>
       <%= link_to home_applications_path, style: "display: inline-block", class: "btn btn-secondary my-3 btn-lg btn-block" do %>
-        <% if @need_votes.count != 0 %>
-          <div class="bg-toca-red notification-bubble"><%= @need_votes.count %></div>
+        <% if @need_votes != 0 %>
+          <div class="bg-toca-red notification-bubble"><%= @need_votes %></div>
         <% end %>
         Applications Needing Votes
       <% end %>
